--- a/views/campgrounds/New.ejs
+++ b/views/campgrounds/New.ejs
@@ -1,9 +1,10 @@
 <% layout('/layouts/BoilerPlate') %>
     <div class="row">
         <h1 class="text-center">Create a new campground</h1>
-        <div class="col-6 offset-3">
+        <div class="col-lg-6 offset-lg-3">
             <p style="color: red;" class="mb-2 mt-2">* Mandatory Fields</p>
-            <form action="/campgrounds" method="post" class="needs-validation" novalidate enctype="multipart/form-data">
+            <form action="/campgrounds" method="post" class="needs-validation d-inline" novalidate
+                enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Enter Campground Title<span style="color: red;">*</span> :
                     </label>
@@ -60,9 +61,12 @@
                         Looks good!
                     </div>
                 </div>
+                <div>
+                    <label for="submit" class="form-label mb-3">To create, click on submit</label>
+                </div>
                 <button type="submit" class="btn btn-success btn-sm">Submit</button>
                 <button type="reset" class="btn btn-danger btn-sm">Reset</button>
             </form>
-            <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
+            <a href="/campgrounds" class="btn btn-secondary btn-sm">Go Back</a>
         </div>
     </div>
