--- a/views/ErrorPage.ejs
+++ b/views/ErrorPage.ejs
@@ -1,6 +1,6 @@
 <% layout('/layouts/BoilerPlate') %>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-lg-6 offset-lg-3">
             <div class="alert alert-danger" role="alert">
                 <h1 class="alert-heading">Error <%= error.statusCode %>
                 </h1>
