--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -1,15 +1,16 @@
 <% layout('/layouts/BoilerPlate') %>
     <link rel="stylesheet" href="/CSS/Star Rating.css">
     <div class="row d-flex justify-content-center">
-        <div class="col-6">
+        <div class="col-lg-6 mb-3">
             <div class="card">
                 <% if(campground.images.length> 0) { %>
                     <div id="campgroundCarousel" class="carousel slide card-img-top" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <% campground.images.forEach((image, index)=> { %>
                                 <div class="carousel-item <%= (index === 0) ? 'active' : '' %>" data-bs-interval="5000">
-                                    <a href="<%=image.url%>"><img src="<%=image.url%>" alt="" class="d-block w-100"
-                                            title="Click to view Image" style="cursor: pointer;"></a>
+                                    <a href="<%=image.url%>"><img src="<%=image.cardImage%>" alt=""
+                                            class="d-block w-100" title="Click to view Image"
+                                            style="cursor: pointer;"></a>
                                 </div>
                                 <% }); %>
                         </div>
@@ -56,13 +57,36 @@
                                 </li>
                             </ul>
                             <% if(currentUser && currentUser.equals(campground.author)) { %>
-                                <div class="card-body">
-                                    <a href="/campgrounds" class="card-link btn btn-secondary btn-sm">Go Back</a>
-                                    <a href="/campgrounds/<%=campground._id%>/edit"
-                                        class="card-link btn btn-warning btn-sm">Edit</a>
-                                    <a href="/campgrounds/<%=campground._id%>/remove"
-                                        class="card-link btn btn-danger btn-sm">Delete</a>
-                                </div>
+                                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                                    <div class="container-fluid">
+                                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#options">&darr;</button>
+                                        <div class="collapse navbar-collapse" id="options">
+                                            <div class="navbar-nav">
+                                                <div class="mt-3 me-3">
+                                                    <a class="nav-link btn btn-secondary btn-sm"
+                                                        href="/campgrounds"><b>Go
+                                                            Back</b></a>
+                                                </div>
+                                                <div class="mt-3 me-3">
+                                                    <a class="nav-link btn btn-info btn-sm"
+                                                        href="/campgrounds/<%=campground._id%>/manage"><b>Manage
+                                                            Photos</b></a>
+                                                </div>
+                                                <div class="mt-3 me-3">
+                                                    <a class="nav-link btn btn-warning btn-sm"
+                                                        href="/campgrounds/<%=campground._id%>/edit"><b>Edit
+                                                            Campground</b></a>
+                                                </div>
+                                                <div class="mt-3 me-3">
+                                                    <a class="nav-link btn btn-danger btn-sm"
+                                                        href="/campgrounds/<%=campground._id%>/remove"><b>Delete
+                                                            Campground</b></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </nav>
                                 <% } %>
                                     <% if(!campground.reviews.length) { %>
                                         <div class="card-footer text-muted">No reviews yet.</div>
@@ -72,7 +96,7 @@
                 <a href="/campgrounds" class="card-link btn btn-secondary btn-sm mt-3">Go Back</a>
                 <% } %>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
             <div class="card mb-3">
                 <div class="card-header">
                     <h4>Leave a Review</h4>
