--- a/views/partials/Flash.ejs
+++ b/views/partials/Flash.ejs
@@ -10,7 +10,8 @@
 </svg>
 
 <% if(success && success.length) { %>
-    <div class="alert alert-success d-flex align-items-center alert-dismissible fade show col-4 offset-4" role="alert">
+    <div class="alert alert-success d-flex align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
+        role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
             <use xlink:href="#check-circle-fill" />
         </svg>
@@ -22,7 +23,7 @@
     <% } %>
 
         <% if(error && error.length) { %>
-            <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show col-6 offset-3"
+            <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show col-lg-6 offset-lg-3"
                 role="alert">
                 <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
                     <use xlink:href="#exclamation-triangle-fill" />
